package br.com.academico.projeto;
public interface IProjeto {
    
    public void submeterProjetoPesquisa();
    public void submeterProjetoExtensao();
}